--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 .vscode/launch.json
 .vscode/tasks.json
+0x05-pointers_arrays_strings/_putchar.c
+0x05-pointers_arrays_strings/0-main.c
+0x05-pointers_arrays_strings/1-main.c
+0x05-pointers_arrays_strings/2-main.c
+0x05-pointers_arrays_strings/3-main.c
+0x05-pointers_arrays_strings/4-main.c
+0x05-pointers_arrays_strings/5-main.c
+0x05-pointers_arrays_strings/6-main.c
