--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 0x05-pointers_arrays_strings/4-main.c
 0x05-pointers_arrays_strings/5-main.c
 0x05-pointers_arrays_strings/6-main.c
+0x05-pointers_arrays_strings/7-main.c
