--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 0x05-pointers_arrays_strings/6-main.c
 0x05-pointers_arrays_strings/7-main.c
 0x05-pointers_arrays_strings/8-print_array.c
+0x05-pointers_arrays_strings/8-main.c
