--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 0x06-pointers_arrays_strings/2-main.c
 0x06-pointers_arrays_strings/3-main.c
 0x06-pointers_arrays_strings/4-main.c
+0x06-pointers_arrays_strings/6-main.c
