--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@
 0x06-pointers_arrays_strings/3-main.c
 0x06-pointers_arrays_strings/4-main.c
 0x06-pointers_arrays_strings/6-main.c
+0x07-pointers_arrays_strings/0-main.c
+.gitignore
+0x07-pointers_arrays_strings/1-main.c
