[ADD] main.c for task4

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@
 0x07-pointers_arrays_strings/1-main.c
 0x07-pointers_arrays_strings/2-main.c
 0x07-pointers_arrays_strings/3-main.c
+0x07-pointers_arrays_strings/4-main.c
