--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 0x07-pointers_arrays_strings/2-main.c
 0x07-pointers_arrays_strings/3-main.c
 0x07-pointers_arrays_strings/4-main.c
+0x07-pointers_arrays_strings/5-main.c
