--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,10 @@
 0x06-pointers_arrays_strings/4-main.c
 0x06-pointers_arrays_strings/6-main.c
 0x07-pointers_arrays_strings/0-main.c
-.gitignore
 0x07-pointers_arrays_strings/1-main.c
 0x07-pointers_arrays_strings/2-main.c
 0x07-pointers_arrays_strings/3-main.c
 0x07-pointers_arrays_strings/4-main.c
 0x07-pointers_arrays_strings/5-main.c
+0x07-pointers_arrays_strings/_putchar.c
+0x07-pointers_arrays_strings/7-main.c
