--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@
 0x07-pointers_arrays_strings/5-main.c
 0x07-pointers_arrays_strings/_putchar.c
 0x07-pointers_arrays_strings/7-main.c
+0x07-pointers_arrays_strings/8-main.c
