--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@
 0x07-pointers_arrays_strings/_putchar.c
 0x07-pointers_arrays_strings/7-main.c
 0x07-pointers_arrays_strings/8-main.c
+0x07-pointers_arrays_strings/100-main.c
