--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@
 0x07-pointers_arrays_strings/7-main.c
 0x07-pointers_arrays_strings/8-main.c
 0x07-pointers_arrays_strings/100-main.c
+0x08-recursion/0-main.c
+0x08-recursion/_putchar.c
