[UPDATE] with main.c for task1

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@
 0x07-pointers_arrays_strings/100-main.c
 0x08-recursion/0-main.c
 0x08-recursion/_putchar.c
+0x08-recursion/strlen.c
+0x08-recursion/1-main.c
