--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@
 0x0E-structures_typedef/0-main.c
 0x0E-structures_typedef/1-main.c
 0x0E-structures_typedef/2-main.c
+0x0E-structures_typedef/4-main.c
