--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@
 0x0F-function_pointers/1-main.c
 0x0F-function_pointers/2-main.c
 0x10-variadic_functions/0-main.c
+0x10-variadic_functions/1-main.c
