--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@
 0x0F-function_pointers/2-main.c
 0x10-variadic_functions/0-main.c
 0x10-variadic_functions/1-main.c
+0x10-variadic_functions/2-main.c
