--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@
 0x10-variadic_functions/0-main.c
 0x10-variadic_functions/1-main.c
 0x10-variadic_functions/2-main.c
+0x10-variadic_functions/3-main.c
