--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@
 0x10-variadic_functions/1-main.c
 0x10-variadic_functions/2-main.c
 0x10-variadic_functions/3-main.c
+0x10-variadic_functions/miniprintf.c
