--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@
 0x10-variadic_functions/3-main.c
 0x10-variadic_functions/miniprintf.c
 0x12-singly_linked_lists/0-main.c
+0x12-singly_linked_lists/1-main.c
