--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@
 0x10-variadic_functions/miniprintf.c
 0x12-singly_linked_lists/0-main.c
 0x12-singly_linked_lists/1-main.c
+0x12-singly_linked_lists/2-main.c
