--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,4 @@
 0x12-singly_linked_lists/0-main.c
 0x12-singly_linked_lists/1-main.c
 0x12-singly_linked_lists/2-main.c
+0x12-singly_linked_lists/3-main.c
