--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@
 0x12-singly_linked_lists/1-main.c
 0x12-singly_linked_lists/2-main.c
 0x12-singly_linked_lists/3-main.c
+0x12-singly_linked_lists/100-main.c
