--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,4 @@
 0x12-singly_linked_lists/2-main.c
 0x12-singly_linked_lists/3-main.c
 0x12-singly_linked_lists/100-main.c
+0x13-more_singly_linked_lists/0-main.c
