--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,13 @@
 0x13-more_singly_linked_lists/9-main.c
 *-main.c
 0x15-file_io/Requiescat
+.idea/holbertonschool-low_level_programming.iml
+.idea/misc.xml
+.gitignore
+.idea/modules.xml
+.idea/vcs.xml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/inspectionProfiles/Project_Default.xml
+0x1C-makefiles/school
+0x1C-makefiles/__pycache__/5-island_perimeter.cpython-38.pyc
+0x1A-hash_tables/g
